Align class section to start to prevent strecting of sidebar height

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -128,6 +128,10 @@ th {
   align-items: center;
 }
 
+.align-start {
+  align-items: start;
+}
+
 .justify-space-between {
   justify-content: space-between;
 }
